tests/snapshots/installer-screen__install-blocked.snap
---
source: src/tests/screens.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 50 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "╭─ deb2 installer • configure ─────────────────────────────────────────────────╮",
        "│                                                                              │",
        "│     OS Image                                                                 │",
        "│        name                deb2                                              │",
        "│        repo                ghcr.io/tectonic-os/deb2:latest                   │",
        "│        bootloader          grub2                                             │",
        "│                                                                              │",
        "│     UEFI Firmware                                                            │",
        "│        secure boot         off (setup mode)                                  │",
        "│        platform key        none (setup mode)                                 │",
        "│                                                                              │",
        "│     OS setup                                                                 │",
        "│   > ?  hostname                                                              │",
        "│     ?  username                                                              │",
        "│     ?  password                                                              │",
        "│     ?  password (confirm)                                                    │",
        "│                                                                              │",
        "│     Disk setup                                                               │",
        "│     ✓  partition layout    whole disk                                        │",
        "│     ✓  encryption          none                                              │",
        "│     ?  disk selection                                                        │",
        "│        disk                size      filesystem    format  type   mount      │",
        "│        ○ Cru...(/dev/sdb)  16.1 GB                                           │",
        "│        ○ /dev/vda          68.7 GB                                           │",
        "│        ├─ EFI (/dev/vda1)  0.5 GB    vfat                                    │",
        "│        ├─ o...(/dev/vda2)  68.2 GB   ext4                                    │",
        "│        └─ /dev/vda3        64.4 GB   luks(closed)                            │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│     Install     Switch to shell     Restart now     Shut down                │",
        "│                                                                              │",
        "│     Missing: hostname, installation disk, username, password                 │",
        "│                                                                              │",
        "╰─ ↑↓ navigate • ⏎  select ────────────────────────────────────────────────────╯",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 13, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 17, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 17, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 18, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 19, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 20, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 22, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 23, fg: Rgb(108, 224, 123), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 23, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 24, fg: Rgb(108, 224, 123), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 24, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 25, fg: Rgb(255, 191, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 25, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 26, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 27, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 28, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 29, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 30, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 59, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 31, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 32, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 33, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 34, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 35, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 36, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 37, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 38, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 39, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 40, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 41, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 62, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 42, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 43, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 44, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 44, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 45, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
